--- a/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
@@ -36,7 +36,7 @@ ENG_local_initiative_desc:0 "지방과, 지방에서 계획을 구성할 수 있
 ENG_political_commissars:0 "정치 장교"
 ENG_political_commissars_desc:0 "때때로, 가장 근면한 생디칼리스트라도 그의 의무를 상기시킬 자그마한 물건이 필요하다. 때때로, 그 물건은 리볼버의 조준경을 통해 제공되어야 한다. "
 ENG_defend_the_revolution:0 "연방주의 : 혁명을 수호하라!"
-ENG_defend_the_revolution_desc:0 "혁명은 Autonomists 과 Maximists 로부터 지켜져야 한다! 정통적인 방식만이 우리의 길이다!"
+ENG_defend_the_revolution_desc:0 "혁명은 자치론자와 마르크스주의자로부터 지켜져야 한다! 정통적인 방식만이 우리의 길이다!"
 ENG_new_capital:0 "TUC 이전"
 ENG_new_capital_desc:0 "런던은 중앙집권주의에 젖어 있으며 그것은 또한 TUC의 이미지이다. 모든 연방의 외곽에서부터 접근하기 쉬운 더 작은 도시로의 이전만이 전 영국을 위한 연방을 보장할 것이다. 그 도시는 버밍엄이 될 것이다."
 ENG_home_rule:0 "지방의 통제"
@@ -45,12 +45,12 @@ ENG_dissolve_tuc:0 "TUC 해체"
 ENG_dissolve_tuc_desc:0 "노동 조합 회의는 그의 역할을 다했다. 이제부터, 그것은 생디칼리스트적 이상향에서 중앙집권적 압제로의 상징으로 변화하였다. 인민궁전을 새로운 영국의 TUC로 만들 때가 왔다. 연방의 남은 지역은 곧 다뤄질 것이다.."
 ENG_devolution:0 "이행"
 ENG_devolution_desc:0 "카디프와 에딘버러에서의 TUC의 설립과 함께, 이행은 성공적인 결말을 맞이하였다."
-ENG_turn_the_other_cheek:0 "Maximists와의 타협"
+ENG_turn_the_other_cheek:0 "마르크스주의자와의 타협"
 ENG_turn_the_other_cheek_desc:0 "사실, 양측에서 협공 당하는 것은 끔찍한 상황인 것으로 보인다. 우리의 계획의 일부분이라도 실현하기 위한 기회는 지금이다. 몇몇 극단적 부분에서 타협을 해야 할 지라도 우리는 이 기회를 버릴 수 없다."
-ENG_city_upon_a_hill:0 "Autonomists와의 타협"
+ENG_city_upon_a_hill:0 "자치론자와의 타협"
 ENG_city_upon_a_hill_desc:0 "사실, 양측에서 협공 당하는 것은 끔찍한 상황인 것으로 보인다. 우리의 계획의 일부분이라도 실현하기 위한 기회는 지금이다. 몇몇 극단적 부분에서 타협을 해야 할 지라도 우리는 이 기회를 버릴 수 없다"
 ENG_evolution:0 "진화"
-ENG_evolution_desc:0 "Autonomists 와 Maximists 양측 모두 이미 작동하는 기계를 멈추려 하고 있다. 영국식 생디칼리즘은 그 자체로 훌륭하다; 그들이 이해하려 한다면 말이다…"
+ENG_evolution_desc:0 "자치론자와 마르크스주의자 양측 모두 이미 작동하는 기계를 멈추려 하고 있다. 영국식 생디칼리즘은 그 자체로 훌륭하다; 그들이 이해하려 한다면 말이다…"
 ENG_merge:0 "대 호국경"
 ENG_merge_desc:0 "헌법에는 합치되지 않지만, 총서기의 행정부와 노동 조합 회의의 의장을 영국 연방의 대 호국경의 새로운 행정부로 통합하는 것은 우리의 개혁에 많은 힘을 실어줄 것 이다"
 ENG_reform_militia:0 "민병대 개혁"
@@ -81,7 +81,7 @@ ENG_three_armies:0 "세 지역 군대"
 ENG_three_armies_desc:0 "이제 지방 국가들은 최소한의 부분적인 자치권을 얻었고 이는 노동자의 민병대에도 같은 자치권이 부여되야 함을 의미한다. 잠시동안 우리가 초기에 이 새로운 민병대 구조의 형성에 도움을 주면 이 새로운 민병대들은 그들 스스로 자립할 수 있을 것이다."
 ENG_copenhagen_conference:0 "코펜하겐 회의"
 ENG_copenhagen_conference_desc:0 "전 세계에 걸친 우리와 망명한 왕당파들 간의 불편한 평화는 너무 오랫동안 지속되었다. 중립 지역에서의 회의를 열어 새로운 현재 상태를 결정해야 한다."
-ENG_the_hague_conference:0 "Hague Conference"
+ENG_the_hague_conference:0 "헤이그 회담"
 ENG_the_hague_conference_desc:0 "NOT DONE YET"
 ENG_show_of_force:0 "힘을 보여주자!"
 ENG_show_of_force_desc:0 "새로 진수된 신형 항공모함 RNS 레베카의 완벽한 운용과 함께, 공화국 해군은 세계에서 가장 위대한 해군이라는 정당한 직위를 회복할 준비가 되었다. 하지만, 아 해군의 최초 행동의 목표는 상당히 이견이 많다."
@@ -1002,14 +1002,14 @@ uobflavour.44.a:0 "Huzzah!"
 ### Ideas ###
 
 ### Country ###
-ENG_women_soldiers_idea:0 "Women Soldiers"
-ENG_political_commissars_idea:0 "Political Commissars"
+ENG_women_soldiers_idea:0 "여군"
+ENG_political_commissars_idea:0 "정치위원회"
 ENG_home_rule_idea:0 "Home Rule"
 ENG_revolutionary_spirit_idea:0 "Not so splendid isolation"
-ENG_political_pressure_idea:0 "Political Pressure"
-ENG_political_pressure_idea:0 "Political Support"
-ENG_home_front_victory_idea:0 "Victory at the Home Front"
-ENG_blood_idea:0 "Blood, Toil, Tears and Sweat"
+ENG_political_pressure_idea:0 "정치적 압박"
+ENG_political_pressure_idea:0 "정치적 지원"
+ENG_home_front_victory_idea:0 "국내전선에서의 승리"
+ENG_blood_idea:0 "피, 노고, 눈물 그리고 땀"
 ENG_class_war_idea:0 "Class War"
 ENG_militia_idea:0 "Militias"
 ENG_militia_idea_desc:0 "The British military is still largely organised in the impromptu worker's militias of 1925. While these local militias have a high morale, they seem disregardful for some of the finer concepts for warfare, such as the need for working logistics. Due to their deafening cries of 'Break the chains! Break the chains!', our officers routinely suffer from psychological breakdowns."
@@ -1022,19 +1022,19 @@ ENG_air_production:0 "Controlling the Skies"
 ENG_air_production2:0 "Controlling the Battlefield"
 ENG_silence_idea:0 "Silence after the Storm"
 ENG_home_rule_broken_idea:0 "Home Rule abolished"
-ENG_IRA:0 "Irish Republican Army"
+ENG_IRA:0 "아일랜드 공화국군"
 
 ### Flags ###
-ENG_CANIRE_protection:0 "Canada protects Ireland"
-ENG_CANIRE_support:0 "Canada supports Ireland"
-ENG_GERIRE_protection:0 "Germany protects Ireland"
-ENG_GERIRE_support:0 "Germany supports Ireland"
-ENG_IRE_alone:0 "Ireland stands alone"
+ENG_CANIRE_protection:0 "캐나다가 아일랜드를 보호"
+ENG_CANIRE_support:0 "캐나다가 아일랜드를 지원"
+ENG_GERIRE_protection:0 "독일이 아일랜드를 보호"
+ENG_GERIRE_support:0 "독일이 아일랜드를 지원"
+ENG_IRE_alone:0 "아일랜드가 홀로남음"
 
 ### Opinion modifiers ###
-ENG_home_rule_op:0 "Autonomy"
-ENG_devolution_op:0 "Independence"
-ENG_three_armies_op:0 "Military Aid"
+ENG_home_rule_op:0 "자치령"
+ENG_devolution_op:0 "독립"
+ENG_three_armies_op:0 "군사 원조"
 ENG_show_of_force_op:0 "Fleet Manoeuvres"
 ENG_encyclopedia_modifier:0 "Funded World Encyclopedia"
 ENG_solley_op:0 "Like Solley"
@@ -1086,7 +1086,7 @@ POLITICS_PHILIP_SNOWDEN_DESC:0 "The mild-mannered Viscount almost shouldn't have
 ENG_trade_union_congress_desc:0 "Until the next year, the Trade Union Congress will have to work without a Chairman."
 
 ### Parties ###
-ENG_totalist_party:0 "Maximists"
+ENG_totalist_party:0 "마르크스주의자"
 ENG_totalist_party_long:0 "Maximist wing of the TUC"
 ENG_syndicalist_party:0 "Feds/Cons"
 ENG_syndicalist_party_long:0 "Federationist/Congregationist wing of the TUC"
