--- a/Kaiserreich Korean Translation/localisation/KR_Finland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Finland_l_english.yml
@@ -32,6 +32,6 @@ finland.3.t:0 "스웨덴의 운명"
 finland.3.d:0 "오늘, 스웨덴 육군 참모 총장은 육군의 항복을 발표했습니다. 항복 후 보급품과 장비는 핀란드로 보내졌습니다. 완전한 승리입니다."
 finland.3.a:0 "스웨덴을 해방한다."
 finland.3.b:0 "토르네달렌을 합병한다."
-finland.3.c:0 "토르네달렌와 키루나를 합병한다."
+finland.3.c:0 "토르네달렌과 키루나를 합병한다."
 finland.3.e:0 "군사적 점령을 계속한다."
 
