모디파이 번역

--- a/Kaiserreich Korean Translation/localisation/KR_Belgrade_pact_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Belgrade_pact_l_english.yml
@@ -11,27 +11,27 @@ OTT_reparation_payments_from_greece:0 "War reparations from Greece"
 OTT_reparation_payments_from_greece_desc:0 "Greece pays war reparations to the Ottomans."
 
 ### Opinion Modifiers ###
-Balkans_hates_bulgaria:0 "Anti-Bulgarian sentiment"
-Balkans_hates_neighbours:0 "Hegemon of the Balkans"
-Belgrade_Pact_closed_congress:0 "Closed the Belgrade Congress"
-Belgrade_Pact_anti_bulgaria:0 "Against Bulgaria"
-Belgrade_Pact_joined_boo:0 "Joined Pact against Bulgaria"
-Belgrade_Pact_did_not_join_yay:0 "Didn't join Belgrade Pact"
-Belgrade_Pact_refused:0 "Didn't join our Pact'"
-Belgrade_Pact_joined_against_us:0 "Joined Pact against us"
-Belgrade_Pact_joined_yay:0 "Joined Belgrade Pact"
-Belgrade_Pact_supported_enemy:0 "Supported Bulgaria"
-Belgrade_Pact_supported_us:0 "Supported us"
-Belgrade_Pact_refused_us_entry:0 "Refused us entry to the Belgrade Pact"
-Belgrade_Pact_they_withdrew_boo:0 "Withdrew from the Belgrade Pact"
-Belgrade_Pact_they_withdrew_yay:0 "Withdrew from the Belgrade Pact"
-Belgrade_Pact_didnt_send_promised_aid:0 "Didn't send promised aid"
-Belgrade_Pact_sent_promised_aid:0 "Sent aid during the Balkan War"
-Belgrade_Pact_serbia_wont_pressure_ottomans:0 "Refused to pressure the Ottomans"
-Belgrade_Pact_refused_thrace:0 "Refused to cede Thrace"
-Belgrade_Pact_supported_serbia_boo:0 "Supported Serbia"
-Belgrade_Pact_refused_occupation_zone:0 "Refused to divide Bulgaria"
-Belgrade_Pact_refused_to_end_occupation:0 "Refused to end occupation of Bulgaria"
+Balkans_hates_bulgaria:0 "반불가리아 정서"
+Balkans_hates_neighbours:0 "발칸반도의 패권국"
+Belgrade_Pact_closed_congress:0 "베오그라드 의회가 폐쇠됨"
+Belgrade_Pact_anti_bulgaria:0 "반불가리아"
+Belgrade_Pact_joined_boo:0 "불가리아에 대항하는 협약에 가입함"
+Belgrade_Pact_did_not_join_yay:0 "베오그라드 협약에 가입하지 않음"
+Belgrade_Pact_refused:0 "우리의 협약에 가입하지 않음"
+Belgrade_Pact_joined_against_us:0 "우리에 대항하는 협약에 가입함"
+Belgrade_Pact_joined_yay:0 "베오그라드 협약에가입함"
+Belgrade_Pact_supported_enemy:0 "불가리아를 지원했음"
+Belgrade_Pact_supported_us:0 "우리를 지원했음"
+Belgrade_Pact_refused_us_entry:0 "베오그라드 협약 가입을 거절함"
+Belgrade_Pact_they_withdrew_boo:0 "베오그라드 협약 탈퇴"
+Belgrade_Pact_they_withdrew_yay:0 "베오그라드 협약 탈퇴"
+Belgrade_Pact_didnt_send_promised_aid:0 "약속된 지원을 하지 않음"
+Belgrade_Pact_sent_promised_aid:0 "발칸 전쟁 중에 지원을 보내주었음"
+Belgrade_Pact_serbia_wont_pressure_ottomans:0 "오스만 압박을 거부함"
+Belgrade_Pact_refused_thrace:0 "트라키아 할양을 거부함"
+Belgrade_Pact_supported_serbia_boo:0 "세르비아를 지원함"
+Belgrade_Pact_refused_occupation_zone:0 "불가리아 분할을 거부함"
+Belgrade_Pact_refused_to_end_occupation:0 "불가리아 점령을 끝내는 것을 거부함"
 
 ### Events ###
 pact.1.t:0 "The Congress of Belgrade"
