--- a/Kaiserreich Korean Translation/localisation/KR_Leaders_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Leaders_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
 
 ### Leader Descriptions ###
-POLITICS_SMUTS_DESC:0 "This is an example of a leader localisation."
+POLITICS_SMUTS_DESC:0 "지도자 언어파일의 예시입니다."
 
 
 
