--- a/Kaiserreich Korean Translation/localisation/KR_Ottoman_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ottoman_l_english.yml
@@ -138,26 +138,26 @@ ott_investigation_idea:0 "수사"
 ott_investigation_idea_desc:0 "얄로바 왕실 토지 수입의 횡령에 관한 왕실 조사"
 
 ### Parties ###
-OTT_totalist_party:0 "Misak-ı Avam"
-OTT_totalist_party_long:0 "Misak-ı Avam 정당"
+OTT_totalist_party:0 "민중협약"
+OTT_totalist_party_long:0 "민중협약당"
 OTT_syndicalist_party:0 "OAF"
 OTT_syndicalist_party_long:0 "오스만 노동당"
 OTT_radical_socialist_party:0 "OSF"
 OTT_radical_socialist_party_long:0 "오스만 사회당"
 OTT_social_democrat_party:0 "SDF"
 OTT_social_democrat_party_long:0 "사회민주당"
-OTT_social_liberal_party:0 "Hürriyet ve İtilaf"
-OTT_social_liberal_party_long:0 "Hürriyet ve İtilaf Fırkası"
+OTT_social_liberal_party:0 "자유연합당"
+OTT_social_liberal_party_long:0 "자유연합당"
 OTT_market_liberal_party:0 "AİF"
-OTT_market_liberal_party_long:0 "Ahali İktisat 정당"
-OTT_social_conservative_party:0 "İttihad-ı Muhammedi"
-OTT_social_conservative_party_long:0 "İttihad-ı Muhammedi 정당"
-OTT_authoritarian_democrat_party:0 "Teceddüt"
-OTT_authoritarian_democrat_party_long:0 "Teceddüt 정당"
-OTT_paternal_autocrat_party:0 "Selamet-i Osmaniye"
-OTT_paternal_autocrat_party_long:0 "Selamet-i Osmaniye 정당"
-OTT_national_populist_party:0 "Bozkurtlar"
-OTT_national_populist_party_long:0 "Bozkurtlar Grubu"
+OTT_market_liberal_party_long:0 "민중경제당"
+OTT_social_conservative_party:0 "이슬람근본주의"
+OTT_social_conservative_party_long:0 "이슬람근본주의당"
+OTT_authoritarian_democrat_party:0 "개신당"
+OTT_authoritarian_democrat_party_long:0 "개신당"
+OTT_paternal_autocrat_party:0 "오스만의은총"
+OTT_paternal_autocrat_party_long:0 "오스만의은총당"
+OTT_national_populist_party:0 "늑대(bozkurt)"
+OTT_national_populist_party_long:0 "늑대 정당"
 
 ### Focuses ###
 OTT_internal_affairs:0 "국가의 문제"
