--- a/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
@@ -201,58 +201,58 @@ uob.5.a:0 "Max.: 확인할 수 있는 모든 반동주의자들과 싸워야 한
 uob.5.b:0 "Fed.: 캐나다는 우리의 숙적이고, 프랑스는 우리의 좋은 동지이다"
 uob.5.c:0 "Aut.: 우리는 왕당파들과 화해를 해야 한다"
 uob.6.t:0 "필립 스노덴의 사임"
-uob.6.d:0 "On the last day of the TUC congress Chairman Philip Snowden climbed up to the podium and made a speech. He claimed that in face of massive rifts within the TUC and due to his age he intends to resign his post. He also pulled out the cliche 'time with the family' bit that all politicians do. The congregation stood silent as he climbed down from the podium and made his way out of the hall. The country is shocked and in a few days' time the TUC will have to vote on a new chairman."
-uob.6.a:0 "Shocking, to say the least"
-uob.7.t:0 "Chairman Election - Maximists Secure a Majority"
-uob.7.d:0 "The TUC has decided to vote for Oswald Mosley's Maximists with an overwhelming majority. Oswald Mosley will become the new Chairman of the TUC."
-uob.7.a:0 "Congratulations, Comrade Mosley"
-uob.8.t:0 "Chairman Election - Autonomists Secure a Majority"
-uob.8.d:0 "The TUC has decided to vote for Niclas y Glais' Autonomists with an overwhelming majority. Niclas y Glais will become the new Chairman of the TUC."
-uob.8.a:0 "Congratulations, Comrade Glais"
-uob.9.t:0 "Chairman Election - Feds & Cons Secure a Majority"
-uob.9.d:0 "The TUC has decided to vote for Arthur Horner's Federationists and Annie Kenney's Congregationists with an overwhelming majority. The two running mates will now have to decide who will become the new Chairman - or Chairwoman - of the TUC."
-uob.9.a:0 "Congratulations, Comrade Kenney"
-uob.9.b:0 "Congratulations, Comrade Horner"
-uob.10.t:0 "Chairman Election - Maximists Secure no Majority"
-uob.10.d:0 "The TUC has decided to vote for Oswald Mosley's Maximists - but not with any great majority. Oswald Mosley will become the new Chairman of the TUC but he will have to compromise with other factions."
-uob.10.a:0 "Congratulations, Comrade Mosley"
-uob.11.t:0 "Chairman Election - Autonomists Secure no Majority"
-uob.11.d:0 "The TUC has decided to vote for Niclas y Glais' Autonomists - but not with any great majority. Niclas y Glais will become the new Chairman of the TUC but he will have to compromise with other factions."
-uob.11.a:0 "Congratulations, Comrade Glais"
-uob.12.t:0 "Chairman Election - Feds & Cons Secure no Majority"
-uob.12.d:0 "The TUC has decided to vote for Arthur Horner's Federationists and Annie Kenney's Congregationists - but not with any great majority. The two running mates will be able to decide who will become the new Chairman - or Chairwoman - but he - or she - will have to compromise with other factions."
-uob.12.a:0 "Congratulations, Comrade Kenney"
-uob.12.b:0 "Congratulations, Comrade Horner"
-uob.13.t:0 "Chairman Election - Draw"
-uob.13.d:0 "The TUC has voted repeatedly during the last few days and the deadlock continues. What should be done?"
-uob.13.a:0 "The congress elects the General Secretary Tom Mann"
-uob.13.b:0 "There shall be no Chairman until next year."
-uob.14.t:0 "Chairman Election - The Next Round"
-uob.14.d:0 "Last year the election to the post of TUC chairman ended in a draw. Today the next round begins."
-uob.14.aa:0 "Erm... Congratulations, Comrade Mosley"
-uob.14.ab:0 "Congratulations, Comrade Glais"
-uob.14.ac:0 "Congratulations, Comrade Kenney"
-uob.14.ad:0 "Congratulations, Comrade Horner"
-uob.15.t:0 "Show of Force"
-uob.15.d:0 "With the newest aircraft carrier RNS Rebecca fully operational the Republican Navy was ready to reclaim her rightful position among the mightiest navies of the world. However the target of her first action was heavily disputed. Most officers opted for a full scale naval manoeuvre near Ireland or even further west wards - near the Azores or Iceland. But a naval manoeuvre of such large scale would surely draw attention of the much more powerful and heavily armed Hochseeflotte and even the smaller Canadian Royal navy might be forced to organise countermeasures. Most members of the Congress of Trade Unions opted for a small scale manoeuvre possibly without even leaving British territorial waters. Ultimately the Naval Commissar was inclined in favour for the Irish option."
-uob.15.a:0 "Keep the fleet in our territorial waters"
-uob.15.b:0 "Send the Grand Fleet towards Ireland"
-uob.15.c:0 "Divide the fleet and perform manoeuvres near the Azores and Iceland"
-uob.16.t:0 "British Fleet Manoeuvres"
-uob.16.d:0 "The British navy has steamed out of its ports and has assembled to demonstrate its power against our neutral island. In face of this grave situation many politicians suggest that Ireland should find someone to guarantee its independence. The most reasonable option would be Germany - but there are even some advocating a return to Windsor protection."
-uob.16.a:0 "Maintain our neutrality"
-uob.16.b:0 "Ask the Kaiser for protection"
-uob.16.c:0 "Ask the Canadian king for protection"
-uob.17.t:0 "Ireland asks for help"
-uob.17.d:0 "The Irish have asked for our support in face of Socialist violations of their neutrality. This gives us an opportunity to recover a part of our sphere of influence and undermine the socialist activities in the region."
-uob.17.a:0 "Proclaim that Ireland is protected by the Entente"
-uob.17.b:0 "Announce our support for Ireland"
-uob.17.c:0 "We are not ready for such involvement in the Old World"
-uob.18.t:0 "Canada protects Ireland"
-uob.18.d:0 "The Canadian government has proposed to offer the Irish military and diplomatic support against the Union of Britain. Even though there are still many circles fearing the potential rise of Windsor influence this is clearly a step towards Irish security."
-uob.18.a:0 "Most splendid!"
-uob.18.b:0 "Bloody hell!"
-uob.19.t:0 "Canada supports Ireland"
+uob.6.d:0 "TUC 회의의 마지막날 의장 필립 스노덴은 연단에 서서 발언을 하였다. 그는 TUC내의 상당한 균열에 마주하였으며 그의 나이를 고려하여 그의 직위에서 사임할 용의를 표했다. 그는 또한 모든 정치가들이 하는 ‘가족과의 시간’ 클리셰 또한 꺼냈다. 청중들 모두 그가 연단에 선 뒤 회담장에서 나갈 때까지 침묵을 유지했다. 국가는 충격에 빠졌고 며칠 내에 TUC는 신임 의장을 뽑아야만 할 것이다."
+uob.6.a:0 "놀랍군,과장이 필요 없겠어"
+uob.7.t:0 "의장 선출 - Maximists가 과반을 차지하다"
+uob.7.d:0 "TUC는 오스왈드 모즐리의 Maximists에 과반의 표를 주기로 하였다. 오스왈드 모즐리는 곧 TUC의 신임 의장이 될 것이다."
+uob.7.a:0 "축하하오,모즐리 동지"
+uob.8.t:0 "의장 선출 - Autonomists가 과반을 차지하다"
+uob.8.d:0 "TUC는 니클라스 y 글라이스의 Autonomists에 과반의 표를 주기로 하였다. 니클라스 글라이스는 곧 TUC의 신임 의장이 될 것이다."
+uob.8.a:0 "축하하오,글라이스 동지"
+uob.9.t:0 "의장 선출 - Feds & Cons가 과반을 차지하다"
+uob.9.d:0 "TUC는 아서 호너의 Federationists 와 애니 케니의 Congregationists에 과반의 표를 주기로 하였다. 두 공동 대표는 이제 누가 TUC의 의장 – 혹은 여성 의장 -이 될 지 결정해야 한다."
+uob.9.a:0 "축하하오,케니 동지"
+uob.9.b:0 "축하하오,호너 동지"
+uob.10.t:0 "의장 선출 - Maximists가 과반 확보에 실패하다"
+uob.10.d:0 "TUC는 오스왈드 모즐리의 Maximists에 표를 주기로 하였다 - 하지만 과반 달성에는 실패하였다. 오스왈드 모즐리는 곧 TUC의 신임 의장이 될 것이지만, 다른 파벌과의 타협이 필요할 것이다."
+uob.10.a:0 "축하하오,모즐리 동지"
+uob.11.t:0 "의장 선출 - Autonomists가 과반 확보에 실패하다"
+uob.11.d:0 "TUC는 니클라스 y 글라이스의 Autonomists에 표를 주기로 하였다 - 하지만 과반 달성에는 실패하였다. 니클라스 y 글라이스는 곧 TUC의 신임 의장이 될 것이지만, 다른 파벌과의 타협이 필요할 것이다"
+uob.11.a:0 "축하하오,글라이스 동지"
+uob.12.t:0 "의장 선출 - Feds & Cons가 과반 확보에 실패하다"
+uob.12.d:0 "TUC는 아서 호너의 Federationists 와 애니 케니의 Congregationists에 과반의 표를 주기로 하였다 - 하지만 과반 달성에는 실패하였다. 두 공동 대표는 이제 누가 TUC의 의장 – 혹은 여성 의장 -이 될 지 결정해야 하지만 그 - 혹은 그녀 -는 다른 파벌과의 타협이 필요할 것이다."
+uob.12.a:0 "축하하오,케니 동지"
+uob.12.b:0 "축하하오,호너 동지"
+uob.13.t:0 "의장 선출 - 무승부"
+uob.13.d:0 "TUC는 며칠간 투표를 계속하였고 교착 상태가 진행되고 있다. 어떻게 해야 하는가?"
+uob.13.a:0 "의회는 서기장 톰 맨을 선출한다"
+uob.13.b:0 "내년까지 의장은 공석일 것이다"
+uob.14.t:0 "의장 선출 - 2차전"
+uob.14.d:0 "작년의 TUC 의장 선거는 무승부로 끝났다. 오늘은 2차전의 시작이다."
+uob.14.aa:0 "어... 축하하오,모즐리 동지"
+uob.14.ab:0 "축하하오,글라이스 동지"
+uob.14.ac:0 "축하하오,케니 동지"
+uob.14.ad:0 "축하하오,호너 동지"
+uob.15.t:0 "위력을 보이다"
+uob.15.d:0 "새로 진수된 신형 항공모함 RNS 레베카의 완벽한 운용과 함께, 공화국 해군은 세계에서 가장 위대한 해군이라는 정당한 직위를 회복할 준비가 되었다. 하지만, 아 해군의 최초 행동의 목표는 상당히 이견이 많다. 대다수의 장교단은 아일랜드 혹은 서쪽으로 더 멀리 나가는 – 아조레스 해 혹은 아이슬란드에서의 대대적 해군 기동을 선택하고 있다. 하지만 그런 대대적 해군 기동은 훨씬 더 강력하고 중무장한 Hochseeflotte와 심지어 더 작은 캐나다 왕립 해군까지도 대응해야 함이 강요된다. 의회의 대다수는 조금 더 소규모의 영국 근해 바다에서의 해군 기동을 선택하고 있다. 최종적으로 해군 정치장교는 아일랜드를 겨냥하는 계획을 마음에 들어한다."
+uob.15.a:0 "함대를 근해 가까이 유지하라"
+uob.15.b:0 "대함대를 아일랜드를 향해 보내라"
+uob.15.c:0 "함대를 분할해 아조레스와 아이슬랜드에서 기동을 뽐내자"
+uob.16.t:0 "영국 함대 기동"
+uob.16.d:0 "영국 해군은 그들의 항구 밖에서 증기를 내뿜으며 그들의 위력을 중립 도서인 우리에게 보이기 위해 집합하였다. 이 막중한 상황 속에서 많은 정치가들은 아일랜드가 우리의 독립을 보장해 줄 누군가를 찾아야 한다고 주장한다. 가장 합당한 선택지는 독일이다 – 하지만 몇몇은 윈저 하의 방어로 돌아가자는 주장을 옹호하고 있다."
+uob.16.a:0 "우리의 중립을 유지한다"
+uob.16.b:0 "카이저에게 보호를 요청한다"
+uob.16.c:0 "캐나다의 왕에게 보호를 요청한다"
+uob.17.t:0 "아일랜드가 도움을 요청하다"
+uob.17.d:0 "아일랜드 정부는 그들의 중립을 위협하는 사회주의적 방해에 맞닥뜨리고 우리에게 도움을 요청하였다. 이는 우리의 영향력이 뻗는 지역의 회복과 지역의 사회주의 활동을 억제할 수 있는 기회를 준다."
+uob.17.a:0 "협상국이 아일랜드를 지킴을 선언한다"
+uob.17.b:0 "아일랜드에 대한 우리의 지원을 발표한다"
+uob.17.c:0 "우리는 그런 구세계로의 개입에 준비가 되지 않았다"
+uob.18.t:0 "캐나다가 아일랜드를 지키다"
+uob.18.d:0 "캐나다 정부는 브리튼 연방에 대항하여 아일랜드에 군사적 정치적 지원을 약속하였다. 비록 윈저 영향력의 잠재적 증가에 대한 공포가 존재하지만 이는 아일랜드에 대한 안전보장으로 향하는 선명한 한 걸음이다."
+uob.18.a:0 "매우 훌륭하다!"
+uob.18.b:0 "이런 젠장!"
+uob.19.t:0 "캐나다가 아일랜드를 "
 uob.19.d:0 "The Canadian government has offered full diplomatic support against the Union of Britain. While it is an important political gesture it has little true value as the Canadians are rather unlikely to directly intervene in any potential conflict. Still, Britain is widely expected to ease their policy towards Ireland until the diplomatic climate changes."
 uob.19.a:0 "At least we're not alone..."
 uob.19.b:0 "It may actually be quite wise to do so..."
