--- a/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
@@ -252,100 +252,100 @@ uob.18.t:0 "캐나다가 아일랜드를 지키다"
 uob.18.d:0 "캐나다 정부는 브리튼 연방에 대항하여 아일랜드에 군사적 정치적 지원을 약속하였다. 비록 윈저 영향력의 잠재적 증가에 대한 공포가 존재하지만 이는 아일랜드에 대한 안전보장으로 향하는 선명한 한 걸음이다."
 uob.18.a:0 "매우 훌륭하다!"
 uob.18.b:0 "이런 젠장!"
-uob.19.t:0 "캐나다가 아일랜드를 "
-uob.19.d:0 "The Canadian government has offered full diplomatic support against the Union of Britain. While it is an important political gesture it has little true value as the Canadians are rather unlikely to directly intervene in any potential conflict. Still, Britain is widely expected to ease their policy towards Ireland until the diplomatic climate changes."
-uob.19.a:0 "At least we're not alone..."
-uob.19.b:0 "It may actually be quite wise to do so..."
-uob.20.t:0 "Canada abandons Ireland"
-uob.20.d:0 "The Canadian government has ignored the Irish call for help. Whatever comes next they must be prepared for the worst as this gives the British a free hand in choosing their next step towards the Emerald Isle."
-uob.20.a:0 "Oh no!"
-uob.20.b:0 "Rule Britannia!"
-uob.21.t:0 "Ireland asks for help"
-uob.21.d:0 "The Irish have asked for our support in face of Socialist violation of their neutrality. This gives us an opportunity to recover a part of our sphere of influence and undermine the socialist activities in the region."
-uob.21.a:0 "Proclaim that Ireland is protected by Mitteleuropa"
-uob.21.b:0 "Announce our support for Ireland"
-uob.21.c:0 "We are not ready for such involvement"
-uob.22.t:0 "Germany protects Ireland"
-uob.22.d:0 "The German government has proposed to offer the Irish military and diplomatic support against the Union. Even though there are still many circles fearing the potential rise of Hohenzollern influence this is clearly a step towards Irish security."
-uob.22.a:0 "Most splendid!"
-uob.22.b:0 "Bloody hell!"
-uob.23.t:0 "Germany supports Ireland"
-uob.23.d:0 "The German government has offered full diplomatic support against the Union of Britain. While it is an important political gesture it has little true value as the Germans are rather unlikely to directly intervene in any potential conflict. Still, Britain is widely expected to ease their policy towards Ireland until the diplomatic climate changes."
-uob.23.a:0 "At least we're not alone..."
-uob.23.b:0 "It may actually be quite wise to do so..."
-uob.24.t:0 "Germany abandons Ireland"
-uob.24.d:0 "The German government has ignored the Irish call for help. Whatever comes next they must be prepared for the worst as this gives the British a free hand in choosing their next step towards the Emerald Isle."
-uob.24.a:0 "Oh no!"
-uob.24.b:0 "Rule Britannia!"
-uob.25.t:0 "Union of Britain threatens Iceland and the Azores"
-uob.25.d:0 "The socialist navy has left its naval base in Liverpool and is heading towards Iceland and the Azores. Although this move seems to be just a show of force it should not be ignored. This is not a direct threat towards the Entente but many officials believe that leaving it unattended is not a wise choice. A most appropriate answer would be to send out the Royal Navy but this is opposed by many Canadians who prefer further preparations before decisive action against the Union is taken."
-uob.25.a:0 "Demonstrate our own power"
-uob.25.b:0 "Spend our resources on further buildup"
-uob.26.t:0 "The Royal Navy on the Atlantic"
-uob.26.d:0 "The King has ordered the Royal Navy to enter the Atlantic in a show of force roughly matching ours. Although the Entente is far too weak for another war we should keep this act in mind should we attempt another demonstration."
-uob.26.a:0 "Bloody hell!"
-uob.26.b:0 "Merde!"
-uob.27.b:0 "The Canadians cower"
-uob.27.d:0 "The Canadians did not dare to send their fleet into the Atlantic allowing our force to operate freely. This has shown the power of socialism and weakness of the Imperialist 'great powers'."
-uob.27.a:0 "Rule Britannia!"
-uob.27.b:0 "Vive le Socialisme!"
-uob.28.t:0 "Union of Britain threatens Iceland and the Azores"
-uob.28.d:0 "The socialist navy has left its naval base in Liverpool and is heading towards Iceland and the Azores. Although this move seems to be just a show of force it should not be ignored. This is not a direct threat towards the Entente but many officials believe that leaving it unattended is not a wise choice. A most appropriate answer would be to send out the Hochseeflotte but this is opposed by many Germans who prefer further preparations before decisive action against the Union is taken."
-uob.28.a:0 "Demonstrate our own power"
-uob.28.b:0 "Spend our resources on further buildup"
-uob.29.t:0 "The Hochseeflotte on the North Sea"
-uob.29.d:0 "The Kaiser has ordered the Hochseeflotte to enter the North Sea in a show of force fairly matching ours. Although the Entente is far too weak for another war we should keep this act in mind should we attempt another demonstration."
-uob.29.a:0 "Bloody hell!"
-uob.29.b:0 "Merde!"
-uob.30.t:0 "The Germans cower"
-uob.30.d:0 "The Germans did not dare to send their fleet into the North Sea allowing our force to operate freely. This has shown the power of socialism and weakness of the Imperialist 'great powers'."
-uob.30.a:0 "Rule Britannia!"
-uob.30.b:0 "Vive le Socialisme!"
-uob.31.t:0 "The Brits invade Ireland"
-uob.31.d:0 "Armed forces of the Union of Britain have launched an invasion of Ireland. According to the treaty we have signed with Ireland we are obliged to aid them in their struggle. Shall we warn the British about the foolishness of their actions?"
-uob.31.a:0 "Warn them to turn back or face Canadian arms!"
-uob.31.b:0 "Back Down! We've changed our minds!"
-uob.32.t:0 "The Canadian Royalists Send an Ultimatum"
-uob.32.d:0 "The Canadian Royalists have sent us an Ultimatum. We are to either pull out of Ireland and declare a cease fire or Canada will come to Ireland's aid."
-uob.32.a:0 "We will not risk war with Canada. Back to the boats!"
-uob.32.b:0 "We answer to no Monarchy! Continue on to Dublin!"
-uob.33.t:0 "The Brits Ignore our Ultimatum"
-uob.33.d:0 "Despite the ultimatum being received by London their troops continue their march to the Irish Capital of Dublin clearly ignoring our demands. We can either declare war and bring Ireland into our alliance or we can stand down and let the Irish fall."
-uob.33.a:0 "We stand with Ireland!"
-uob.33.b:0 "Back Down! We've changed our minds!"
-uob.34.t:0 "Ottawa Warns London"
-uob.34.d:0 "Canada has come to our aid! They have sent an ultimatum to the Union of Britain. They will either fall back to their home islands or risk annihilation."
-uob.34.a:0 "We Knew They'd Pull Through For Us!"
-uob.35.t:0 "The British Pull out of Ireland"
-uob.35.d:0 "After the ultimatum was received by London they quickly sent orders to all their commanders on the ground to cease fire and return to the coast. Ireland's independence will be kept and our pride remains intact."
-uob.35.a:0 "We couldn't have done it without Canada!"
-uob.35.b:0 "Those Socialist twats were in dire need of that!"
-uob.36.t:0 "Canada pulls back"
-uob.36.d:0 "The Canadians have now pulled back on their promises to protect us against the Socialists. We stand alone."
-uob.36.a:0 "Never surrender!"
-uob.37.t:0 "The Brits invade Ireland"
-uob.37.d:0 "Armed forces of the Union of Britain have launched an invasion of Ireland. According to the treaty we have signed with Ireland we are obliged to aid them in their struggle. Shall we warn the British about the foolishness of their actions?"
-uob.37.a:0 "We stand with Ireland!"
-uob.37.b:0 "Back Down! We've changed our minds!"
-uob.38.t:0 "The Germans send an Ultimatum"
-uob.38.d:0 "The Germans have sent us an Ultimatum. We are to either pull out of Ireland and declare a cease fire or Germany will come to Ireland's aid."
-uob.38.a:0 "We will not risk war with Germany, back to the boats!"
-uob.38.b:0 "We answer to no Monarchy! Continue on to Dublin!"
-uob.39.t:0 "The Brits Ignore our Ultimatum"
-uob.39.d:0 "Despite the ultimatum being received by London their troops continue their march to the Irish Capital of Dublin clearly ignoring our demands. We can either declare war and bring Ireland into our alliance or we can stand down and let the Irish fall."
-uob.39.a:0 "They have made their choice, war it is!"
-uob.39.b:0 "Back Down! We've changed our minds!"
-uob.40.t:0 "Berlin Warns London"
-uob.40.d:0 "Germany has come to our aid! They have sent an ultimatum to the Union of Britain. They will either fall back to their home islands or risk annihilation."
-uob.40.a:0 "We Knew They'd Pull Through For Us!"
-uob.41.t:0 "The British Pull out of Ireland"
-uob.41.d:0 "After the ultimatum was received by London they quickly sent orders to all their commanders on the ground to cease fire and return to the coast. Ireland's independence will be kept and our pride remains intact."
-uob.41.a:0 "We couldn't have done it without Germany!"
-uob.41.b:0 "Those Socialist twats were in dire need of that!"
-uob.42.t:0 "Germany pulls back"
-uob.42.d:0 "The Germans have reneged on their promise to protect us against the Socialists. We stand alone."
-uob.42.a:0 "Never surrender!"
-uob.43.t:0 "The Brits invade Ireland"
+uob.19.t:0 "캐나다가 아일랜드를 지원하다 "
+uob.19.d:0 "캐나다 정부는 브리튼 연방에 대항하여 최대한의 정치적 지원을 제공하였다. 이는 중요한 정치적 행동임이 분명하지만 그 내부에는 캐나다인들은 발생할 수 있는 어떤 충돌에도 직접적으로 개입하기를 싫어한다는 숨겨진 사실이 있다. 그럼에도, 브리튼은 아일랜드를 겨냥한 그들의 정책을 외교적 상황이 변화되기 전까지 대대적으로 강도를 느슨히 하고 있다."
+uob.19.a:0 "최소한 우리는 혼자는 아니다..."
+uob.19.b:0 "그리 하는 편이 현명할지도 모른다..."
+uob.20.t:0 "캐나다가 아일랜드를 버리다"
+uob.20.d:0 "캐나다 정부는 아일랜드의 도움 요청을 무시했다. 무엇이 다가오던지 그들은 최악을 준비해야 하며 이는 영국에게 에메랄드 제도를 향한 다음 계획에 자유로움을 부여하였다."
+uob.20.a:0 "안돼!"
+uob.20.b:0 "브리타니아가 지배하노라!"
+uob.21.t:0 "아일랜드가 도움을 요청하다"
+uob.21.d:0 "아일랜드 정부는 그들의 중립을 위협하는 사회주의적 방해에 맞닥뜨리고 우리에게 도움을 요청하였다. 이는 우리의 영향력이 뻗는 지역의 회복과 지역의 사회주의 활동을 억제할 수 있는 기회를 준다."
+uob.21.a:0 "중앙유럽이 아일랜드를 지킴을 선언한다"
+uob.21.b:0 "아일랜드에 대한 우리의 지원을 발표한다"
+uob.21.c:0 "우리는 그런 개입에 준비가 되지 않았다"
+uob.22.t:0 "독일이 아일랜드를 지키다"
+uob.22.d:0 "독일 정부는 브리튼 연방에 대항하여 아일랜드에 군사적 정치적 지원을 약속하였다. 비록 호엔촐레른 영향력의 잠재적 증가에 대한 공포가 존재하지만 이는 아일랜드에 대한 안전보장으로 향하는 선명한 한 걸음이다."
+uob.22.a:0 "매우 훌륭하다!"
+uob.22.b:0 "이런 젠장!"
+uob.23.t:0 "독일이 아일랜드를 지원하다"
+uob.23.d:0 "독일 정부는 브리튼 연방에 대항하여 최대한의 정치적 지원을 제공하였다. 이는 중요한 정치적 행동임이 분명하지만 그 내부에는 독일인들은 발생할 수 있는 어떤 충돌에도 직접적으로 개입하기를 싫어한다는 숨겨진 사실이 있다. 그럼에도, 브리튼은 아일랜드를 겨냥한 그들의 정책을 외교적 상황이 변화되기 전까지 대대적으로 강도를 느슨히 하고 있다."
+uob.23.a:0 "최소한 우리는 혼자는 아니다..."
+uob.23.b:0 "그리 하는 편이 현명할지도 모른다..."
+uob.24.t:0 "독일이 아일랜드를 버리다"
+uob.24.d:0 "독일 정부는 아일랜드의 도움 요청을 무시했다. 무엇이 다가오던지 그들은 최악을 준비해야 하며 이는 영국에게 에메랄드 제도를 향한 다음 계획에 자유로움을 부여하였다."
+uob.24.a:0 "안돼!"
+uob.24.b:0 "브리타니아가 지배하노라!"
+uob.25.t:0 "브리튼 연방이 아이슬랜드와 아조레스를 위협하다"
+uob.25.d:0 "리버풀의 해군 기지를 떠난 사회주의 해군은 아이슬랜드와 아조레스로 향했다. 이는 위력 행사이지만 무시되어서는 안된다. 이는 협상국을 향한 직접적인 위협은 아니지만 많은 고위 공무직에서는 관심을 가지지 않는 것은 현명한 선택이 아니라 믿는다. 가장 적절한 답은 우리의 왕립 해군을 보내는 것이지만 이는 연방이 수행할 결정적인 행동 이전에 추가적인 준비를 선호하는 많은 캐나다인들에게서 반대를 받고 있다."
+uob.25.a:0 "우리의 힘을 보여라"
+uob.25.b:0 "추가적 증강을 위해 자원을 소모해라"
+uob.26.t:0 "대서양에서의 왕립 해군"
+uob.26.d:0 "왕은 왕립 해군에게 우리와 맞먹는 전력을 대서양으로 항해하여 보이라 명령했다. 비록 협상국이 다른 전쟁에서는 심각하게 빈약할지라도 우리는 이 움직임을 눈여겨보며 다른 행동을 시도해야 할 것이다."
+uob.26.a:0 "젠장!"
+uob.26.b:0 "젠장!"
+uob.27.b:0 "캐나다인들이 몸을 숙이다"
+uob.27.d:0 "캐나다인들은 감히 그들의 함대를 대서양에 보내지 않았으며 이는 우리의 함대가 자유롭게 행동하게 만들었다. 이는 사회주의의 위대함과 제국주의자들, 소위 ‘강대국’의 나약함을 보여 주었다."
+uob.27.a:0 "브리타니아가 지배하노라!"
+uob.27.b:0 "사회주의 만세!"
+uob.28.t:0 "브리튼 연방이 아이슬랜드와 아조레스를 위협하다"
+uob.28.d:0 "리버풀의 해군 기지를 떠난 사회주의 해군은 아이슬랜드와 아조레스로 향했다. 이는 위력 행사이지만 무시되어서는 안된다. 이는 협상국을 향한 직접적인 위협은 아니지만 많은 고위 공무직에서는 관심을 가지지 않는 것은 현명한 선택이 아니라 믿는다. 가장 적절한 답은 우리의 Hochseeflotte을 보내는 것이지만 이는 연방이 수행할 결정적인 행동 이전에 추가적인 준비를 선호하는 많은 독일인들에게서 반대를 받고 있다."
+uob.28.a:0 "우리의 힘을 보여라"
+uob.28.b:0 "추가적 증강을 위해 자원을 소모해라"
+uob.29.t:0 "북해에서의 Hochseeflotte"
+uob.29.d:0 "카이저는 Hochseeflotte에게 우리와 맞먹는 전력을 대서양으로 항해하여 보이라 명령했다. 비록 협상국이 다른 전쟁에서는 심각하게 빈약할지라도 우리는 이 움직임을 눈여겨보며 다른 행동을 시도해야 할 것이다."
+uob.29.a:0 "젠장!"
+uob.29.b:0 "젠장!"
+uob.30.t:0 "독일인들이 몸을 숙이다"
+uob.30.d:0 "독일인들은 감히 그들의 함대를 대서양에 보내지 않았으며 이는 우리의 함대가 자유롭게 행동하게 만들었다. 이는 사회주의의 위대함과 제국주의자들, 소위 ‘강대국’의 나약함을 보여 주었다"
+uob.30.a:0 "브리타니아가 지배하노라!"
+uob.30.b:0 "사회주의 만세!"
+uob.31.t:0 "브리튼이 아일랜드를 침공하다"
+uob.31.d:0 "브리튼 연방의 군부대가 아일랜드로의 침공을 시작했다. 아일랜드와 우리가 맺은 협약에 따르면 그들의 사투에 우리가 지원을 해야 할 의무가 있다. 우리가 영국에 그들의 어리석은 행동에 경고를 해야 하는가?"
+uob.31.a:0 "물러서지 않으면 캐나다 군을 맞이할 것이라 경고한다!"
+uob.31.b:0 "물러서라! 생각이 바뀌었다!"
+uob.32.t:0 "캐나다 왕당파들이 최후 통첩을 보내다"
+uob.32.d:0 "캐나다 왕당파들이 우리에게 최후 통첩을 보냈다. 우리가 아일랜드에서 발을 빼고 전투의 중지를 선언하지 않으면 캐나다가 아일랜드를 돕기 위해 올 것이다."
+uob.32.a:0 "캐나다와 전쟁을 하는 위험을 감수할 수 없다. 선박으로 돌아가라!"
+uob.32.b:0 "우린 군주제에 아니라 대답한다! 더블린으로 계속 간다!"
+uob.33.t:0 "브리튼이 우리의 최후 통첩을 무시하다"
+uob.33.d:0 "최후 통첩이 런던에 도착했음에도 불구하고 그들의 병력은 아일랜드의 수도로 진군하는 것을 보아 우리의 요구를 무시한 것이 확실하다. 우린 아일랜드를 동맹으로 만들고 전쟁을 선포하거나 방관하며 아일랜드가 무너지도록 방치할 수 있다."
+uob.33.a:0 "우린 아일랜드와 함께 간다!"
+uob.33.b:0 "물러서라! 생각이 바뀌었다!"
+uob.34.t:0 "오타와가 런던에게 경고하다"
+uob.34.d:0 "캐나다가 우리에게 도움을 주었다! 그들은 브리튼 연방에 최후 통첩을 보냈다. 그들은 그들의 본토로 후퇴하거나 전멸을 감수할 것이다."
+uob.34.a:0 "우리를 위해 행동할 줄 알았다!"
+uob.35.t:0 "영국인들이 아일랜드에서 물러나다"
+uob.35.d:0 "런던에 최후 통첩이 전달된 뒤 그들은 상륙한 모든 사령관에게 전투를 중지하고 해안가로 돌아가라는 명령을 내렸다. 아일랜드의 독립은 유지되고 우리의 명예는 실추되지 않았다. "
+uob.35.a:0 "캐나다 없이는 이룰 수 없는 일이다!"
+uob.35.b:0 "저 사회주의자 개자식들은 그걸 끔찍하게 원했겠군!"
+uob.36.t:0 "캐나다가 물러나다"
+uob.36.d:0 "캐나다는 우리와 했던 사회주의자들로부터 우리를 지킨다는 약속에서 물러났다. 우리는 혼자서 스스로 싸워야 한다."
+uob.36.a:0 "항복은 없다!"
+uob.37.t:0 "브리튼이 아일랜드를 침공하다"
+uob.37.d:0 "브리튼 연방의 군부대가 아일랜드로의 침공을 시작했다. 아일랜드와 우리가 맺은 협약에 따르면 그들의 사투에 우리가 지원을 해야 할 의무가 있다. 우리가 영국에 그들의 어리석은 행동에 경고를 해야 하는가?"
+uob.37.a:0 "우리는 아일랜드를 돕는다!"
+uob.37.b:0 "물러서라! 생각이 바뀌었다!"
+uob.38.t:0 "독일이 최후 통첩을 보내다"
+uob.38.d:0 "독일이 우리에게 최후 통첩을 보냈다. 우리가 아일랜드에서 발을 빼고 전투의 중지를 선언하지 않으면 독일이 아일랜드를 돕기 위해 올 것이다."
+uob.38.a:0 "독일과 전쟁을 하는 위험을 감수할 수 없다. 선박으로 돌아가라!"
+uob.38.b:0 "우린 군주제에 아니라 대답한다! 더블린으로 계속 간다!"
+uob.39.t:0 "브리튼이 우리의 최후 통첩을 무시하다"
+uob.39.d:0 "최후 통첩이 런던에 도착했음에도 불구하고 그들의 병력은 아일랜드의 수도로 진군하는 것을 보아 우리의 요구를 무시한 것이 확실하다. 우린 아일랜드를 동맹으로 만들고 전쟁을 선포하거나 방관하며 아일랜드가 무너지도록 방치할 수 있다."
+uob.39.a:0 "그들은 선택을 했으며, 그것은 전쟁이다!"
+uob.39.b:0 "물러서라! 생각이 바뀌었다!"
+uob.40.t:0 "베를린이 런던에게 경고하다"
+uob.40.d:0 "캐나다가 우리에게 도움을 주었다! 그들은 브리튼 연방에 최후 통첩을 보냈다. 그들은 그들의 본토로 후퇴하거나 전멸을 감수할 것이다."
+uob.40.a:0 "우리를 위해 행동할 줄 알았다!"
+uob.41.t:0 "영국인들이 아일랜드에서 물러나다"
+uob.41.d:0 "런던에 최후 통첩이 전달된 뒤 그들은 상륙한 모든 사령관에게 전투를 중지하고 해안가로 돌아가라는 명령을 내렸다. 아일랜드의 독립은 유지되고 우리의 명예는 실추되지 않았다"
+uob.41.a:0 "독일 없이는 이룰 수 없는 일이다!"
+uob.41.b:0 "저 사회주의자 개자식들은 그걸 끔찍하게 원했겠군!"
+uob.42.t:0 "독일이 물러나다"
+uob.42.d:0 "독일은 우리와 했던 사회주의자들로부터 우리를 지킨다는 약속을 어겼다. 우리는 혼자서  스스로 싸워야 한다."
+uob.42.a:0 "항복은 없다!"
+uob.43.t:0 "브리튼이 아일랜드를 침공하다"
 uob.43.d:0 "Armed forces of the Union of Britain have launched an invasion of Ireland. So far we have only given diplomatic support to Ireland and do not have to intervene. We could still bring our forces into action - But after our lenient policy so far such a reaction would most likely raise protests here among those who support the Ulster cause and see the Irish as traitors to the Empire."
 uob.43.a:0 "We stand with Ireland!"
 uob.43.b:0 "Send a strong-worded letter..."
