--- a/Kaiserreich Korean Translation/localisation/KR_Canada_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Canada_l_english.yml
@@ -752,9 +752,9 @@ canada.51.a:0 "리오넬 그루로 교체하라."
 canada.51.b:0 "헌법을 존중하라."
 
 canada.52.t:0 "1937년 퀘벡 주 선거"
-canada.52.d:0 "모리스 뒤플레시스 퀘벡 수상은 정부의 경제 계획이 전통적인 퀘벡 가치에 반한다며 퀘벡 주에서 사회적 신용이 이행되는 것을 막기 위해 최선을 다하겠다고 발표했습니다. 결과적으로, 그의 지역은 캐나다의 다른 지역에서 투자한 것을 놓쳤고 퀘벡은 그 결과 경제적으로 고통받고 있습니다. 사회적 신용 지원이 확대되었고 프랑스계 캐나다인의 사회 신용 당국은 입법부에서 뒤플레시스와 국가 연합의 통제권을 얻었습니다."
+canada.52.d:0 "모리스 뒤플레시스 퀘벡 수상은 정부의 경제 계획이 전통적인 퀘벡 가치에 반한다며 퀘벡 주에서 사회적 신용이 이행되는 것을 막기 위해 최선을 다하겠다고 발표했습니다. 결과적으로, 그의 지역은 캐나다의 다른 지역에서 투자한 것을 놓쳤고 퀘벡은 그 결과 경제적으로 고통받고 있습니다. 사회적 신용 지원이 확대되었고 프랑스계 캐나다인의 사회 신용 당국은 입법부에서 뒤플레시스와 민족 연합의 통제권을 얻었습니다."
 canada.52.a:0 "루이스 에반과 사회 신용당"
-canada.52.b:0 "뒤플레시스와 국가 연합"
+canada.52.b:0 "뒤플레시스와 민족 연합"
 
 canada.53.t:0 "Naval Exercises in the Atlantic"
 canada.53.d:0 "With the international situation deteriorating it is imperative that we demonstrate our strength and exercise our right to free passage in the Atlantic. To this end the Admiralty have scheduled an extensive array of fleet manoeuvres and war-games in the North Atlantic. How shall we proceed?"
