--- a/Kaiserreich Korean Translation/localisation/KR_Literature_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Literature_l_english.yml
@@ -1,17 +1,17 @@
 l_english:
 
-literature.1.t:0 "Alamut - newest Book of Vladimir Bartol"
-literature.1.d:0 "The Slovenes are one of the lesser talked-about minorities of our Empire, though even after hundreds of years of being part of it, they've stuck to their own language and culture. The newest best-seller in the Slovene speaking territories, written by Bartol, is a story of Turkish and Persian struggles to control the fortress of Alamut. The action is set in the 11th century, when Seljuk Turks started expanding into Asia Minor. It is to suspected that the book will be translated into German and various other languages soon enough."
+literature.1.t:0 "알라무트 - 블라디미르 바르톨의 신작"
+literature.1.d:0 "슬로베니아인은 우리 제국에서 다른 언어를 쓰는 소수 민족 중 하나입니다. 슬로베니아인은 우리 제국의 일부가 된지 수백년이 지났지만 그들의 언어와 문화를 지켰습니다. 바르톨이 쓴 최신 슬로베니아어 베스트셀러는 알라무트 요새를 차지하기 위한 터키인과 페르시아인들의 이야기입니다. 이 소설은 셀주크 튀르크가 소아시아로 진출하기 시작했던 11세기를 배경으로 하고 있습니다. 이 책은 독일어와 다른 언어로 번역될 것입니다."
 literature.1.a:0 "Great!"
 
-literature.2.t:0 "Diary of a Country Priest - newest Book of Georges Benanos"
+literature.2.t:0 "어느 시골 사제의 일기 - 조르주 베르나노스의 신작"
 literature.2.d:0 "The history of French literature is unique. It is comprised of centuries of great masterpieces, which deliver to the reader ultimate feelings. The newest book, promoted very hard by the Arts' Highest Bureau, is about a Catholic priest who, after new acts on religion are passed after Second Revolution, comes to a village and tries to spread the word of God. Unfortunately, the government has sent a young syndicalist activist to teach the village about the blessings of Marxism, as well. Soon, a love triangle forms between the priest, the agitator and the daugther of a wealthy Kulak. The story ends on a happy note, as the priest loses his faith and becomes a mechanic, and the agitator and the girl start new happy life together with Marx. Critics from non-syndicalist countries say that this is an utter piece of propaganda and that the story it tells is rubbish, however, the common folk of Syndie France are taking quite a liking to it."
 literature.2.a:0 "I want more!"
 
-literature.3.t:0 "Claude Lévi-Strauss - what to do with him?"
-literature.3.d:0 "Claude Lévi-Strauss is an internationally famous philosopher, antrophologist and ethnologist. He has brought out his genious and insightful studies on Beduin tribes, which were banned by National Frence censorship but they were smuggled to Italy and the Ottoman Empire, where they were translated into many languages. He gained enormous fame as new young scientist, however, the government of National France treats him unfavorably. He was in prison for two years in 1933 and 1935 for producing anti-government literature due to his pro-socialist views. Now he wants to emigrate elsewhere. Our secret services suspect that he wants to flee to the Commune of France. What we should do with him?"
-literature.3.a:0 "Throw him into jail, this time forever!"
-literature.3.b:0 "Let him go, he won't do anything against us!"
+literature.3.t:0 "클로드 레비스트로스 - 그를 어떻게 하면 좋을까??"
+literature.3.d:0 "클로드 레비스트로스는 세계적으로 유명한 철학자이자 인류학자, 민족학자입니다. 그는 베두인족에 대대 탁월하고 통찰력이 있는 연구를 내놓았습니다. 그 작품은 프랑스 공화국에서 금지되었지만 이탈리아와 오스만 제국으로 밀수되어 번역되었습니다. 젊은 과학자로 엄청난 명성을 얻었지만, 프랑스 공화국 정부는 그를 좋지 않게 보고 있습니다. 친사회주의적 시각이 원인이 되어 그는 반정부적인 문학 작품을 제작한 죄로 1933년부터 1935년까지 2년간 수감되었습니다. 이제 그는 다른 곳으로 이민을 가고 싶어 합니다. 우리 첩보 기관은 그가 프랑스 코뮌으로 뜨고 싶어한다는 의심을 품고 있습니다. 그를 어떻게 대할까요?"
+literature.3.a:0 "종신형에 처하게 한다!"
+literature.3.b:0 "놓아준다. 그는 우리에게 아무것도 하지 않을 것이다!"
 
 literature.4.t:0 "Lévi-Strauss is free!"
 literature.4.d:0 "The famous socialist antrophologist Lévi-Strauss is free from militaristic French tyranny. We should invite him so he can praise our great socialist government!"
@@ -50,8 +50,8 @@ literature.12.t:0 "'Little Marin and the Sailor' - newest Book on Japan's Shelve
 literature.12.d:0 "Our country's recent war has inspired many homecomers to express their experiences in art, one of them being the author of a romance novel of uprecedented sales numbers.\n\nThe book, bearing the title "Marin-chan to Kaigun-kun", or "Little Marin and the Sailor", tells a story of two childhood friends, and their tragic love: a boy and a girl growing up close to each other, partaking in a seemingly unchanging life. However, just when they finish high school, Japan is readying herself for war, and the boy is called to join the Navy. The two have to part from each other, Marin staying at home. Only now that they're seperated, they notice their feelings for each other, but struggle to express them in the few letters they can exchange. Just when the war draws to a close, and Marin yearns for her loved one's return, his letters stop coming.\n\nWhile the book does not represent the highest of Japanese literature, it gives an astonishingly detailed insight to both the daily lives of a farmer's daughter in rural Japan and of a Japanese Navy Marine. The book is scheduled to be translated to German, English and Russian."
 literature.12.a:0 "Tell me, how does it end?"
 
-literature.13.t:0 "'Der Kleine Prinz' - newest book of Statthalter Göring"
-literature.13.d:0 "A novel called Der Kleine Prinz ("The Little Prince"), recently published in a Mittelafrican publishing house, has caused quite some stir, as the author and illustrator is none other than Statthalter Hermann Göring himself. In the small tale, the Statthalter lovingly details the fate of a young boy stranded on a miniscule planet. On his quest to find cake, he must confront the cruelties of the world, but can finally overcome them through superior Prussian discipline. "Soon you will find this book in every future soldier's room", critics are quoted as saying."
+literature.13.t:0 "'어린 왕자' - 괴링 총독의 신작"
+literature.13.d:0 "중앙아프리카 출판사에서 나온 어린 왕자("Der Kleine Prinz")라는 소설은 저자와 삽화가가 헤르만 괴링이라는 사실로 상당한 파문을 일으켰습니다. 이 단편소설에서 총독은 작은 행성에 갇혀있는 어린 소년의 운명을 애정어린 마음으로 자세히 묘사하게 있습니다. 그는 케이크를 찾기위해 세계의 잔인함과 맞서야하지만, 우월한 프로이센식 훈련법으로 이를 극복할 수 있을 것입니다. "미래 장병들의 방에서는 곧 이 책을 찾을 수 있을 것이다."라고 비평가들은 말했습니다."
 literature.13.a:0 "Great!"
 
 literature.14.t:0 "Auf den Marmorklippen, A Book by Ernst Jünger."
